<resources>
    <string name="app_name">AUDITORIA 6´s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AVX El Salvador</string>
    <string name="nav_header_subtitle">Departamento de Sistemas</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_sync">Sincronizar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Pantalla Inicial</string>
    <string name="titulo_home">Auditoria 6S\'s</string>
    <string name="ingreso_de_datos">INGRESO DE DATOS</string>
    <string name="division">Planta</string>
    <string name="planta">Proceso</string>
    <string name="gerente">Gerente</string>
    <string name="area">Area</string>
    <string name="lider">Lider</string>
    <string name="turno">Turno</string>
    <string name="auditor">Auditor</string>
    <string name="fecha">Fecha</string>
    <string name="comenzar">Comenzar</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="buscar_actualizacion">Buscar Actualizacion</string>
    <string name="update_app">Actualizar ahora</string>
</resources>
